# GrapeNotes

./: COPYING  README.md  meson.build
build-aux/flatpak/: io.github.diegoivan.Grape-Notes.json  io.github.diegoivan.Grape-Notes.yaml
data/: io.github.diegoivan.Grape-Notes.gschema.xml  meson.build
po/: POTFILES
resources/: Grape-Notes.gresource.xml  meson.build  style.css
resources/ui/: EditNotebookDialog.ui  EditWrapperDialog.ui  IconPopover.ui  MainWindow.ui  NewNoteDialog.ui  NewNotebookDialog.ui  NoteCard.ui  NotePopover.ui  NoteRenameDialog.ui  NoteSourceView.ui  NoteView.ui  NotebookCard.ui  NotebookPopover.ui  NotebookView.ui  PreferencesWindow.ui
src/: Application.vala  CssUtils.vala  Provider.vala  XmlUtils.vala  meson.build
src/ListModels/: IconListModel.vala
src/Models/: Backpack.vala  FileWrapper.vala  Note.vala  Notebook.vala
src/Services/: StyleManager.vala
src/Views/: NoteSourceView.vala  NoteView.vala  NotebookView.vala
src/Widgets/: EditNotebookDialog.vala  EditWrapperDialog.vala  IconPopover.vala  MainWindow.vala  NewNoteDialog.vala  NewNotebookDialog.vala  NoteCard.vala  NotePopover.vala  NoteRenameDialog.vala  NoteView.vala  NotebookCard.vala  NotebookPopover.vala  NotebookView.vala  PreferencesWindow.vala  View.vala
vapi/: config.vapi
